# observer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/observer/: __init__.py  detector.py  main.py  observer.py
tests/: test_cli.py  test_detector.py  test_event_type.py  test_graceful_shutdown.py  test_notify_dispatch.py  test_observer_hooks.py  test_readme.py  test_run_loop.py  test_scan.py
