[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observer"
version = "1.0.0"
description = "A polling-based folder-watching daemon with an overridable hook interface."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Stefano Bragaglia", email = "stefano-bragaglia@users.noreply.github.com" },
]
keywords = ["filesystem", "watcher", "polling", "cli", "daemon"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stefano-bragaglia/observer"
Repository = "https://github.com/stefano-bragaglia/observer"
Changelog = "https://github.com/stefano-bragaglia/observer/blob/main/CHANGELOG.md"

[project.scripts]
observer = "observer.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "radon",
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/observer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/observer"]
